--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-gplus:before { content: '\f0d5'; } /* '' */
 .icon-linkedin:before { content: '\f0e1'; } /* '' */
-.icon-linkedin:before { content: '\f0e1'; } /* '' */
+.icon-quora:before { content: '\f2c4'; } /* '' */
 .icon-up:before { content: '\f176'; } /* '' */
 
 /* CUSTOM RESETS
@@ -567,6 +567,7 @@ a.twitter-bg:hover {color: #55acee;}
 a.facebook-bg:hover{color: #3b5998;}
 a.gplus-bg:hover{color: #007bb5;} 
 a.linkedin-bg:hover {color: #dd4b39;}
+a.quora-bg:hover {color: #dd4b39;}
 a.icon-up-bg:hover {color: #212121;}
 
 .copyright {
